--- a/index.html
+++ b/index.html
@@ -5,8 +5,291 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="page-header">
+      <a class="main-logo" href="index.html">
+        <img class="logo" src="" alt="Логотип магазина Глэйси">
+      </a>
+      <nav class="main-navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Каталог</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Доставка и оплата</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О компании</a>
+          </li>
+        </ul>
+        <a class="phone" href="tel:+78005558628">+7 800 555-86-28</a>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visyalli-hidden">
+                Поиск
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visyalli-hidden">
+                Вход
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visyalli-hidden">
+                Корзина
+              </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1 class="visyalli-hidden">Магазин мороженного Глэйси</h1>
+      <section class="galary-product">
+        <h2 class="visyalli-hidden">Галерея товаров</h2>
+        <span class="galary-product-title">
+          Нежный пломбир <br>
+          с клубничным джемом
+        </span>
+        <p>Натуральное мороженое из свежих сливок
+          и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.
+        </p>
+        <button class="button" type="button">Заказать</button>
+        <ol class="galary-product-pagination">
+          <li class="galary-product-pagination-item">
+            <button class="galary-product-pagination-button galary-product-pagination-button-current" type="button">
+              <span class="visyalli-hidden">1 фото</span>
+            </button>
+          </li>
+          <li class="galary-product-pagination-item">
+            <button class="galary-product-pagination-button" type="button">
+              <span class="visyalli-hidden">2 фото</span>
+            </button>
+          </li>
+          <li class="galary-product-pagination-item">
+            <button class="galary-product-pagination-button" type="button">
+              <span class="visyalli-hidden">3 фото</span>
+            </button>
+          </li>
+        </ol>
+        <img class="galary-image galary-image-current" src="" alt="Нежный пломбир">
+        <img class="galary-image" src="" alt="Сливочное мороженое">
+        <img class="galary-image" src="" alt="Карамельный пломбир">
+        <button class="galary-button galary-prev" type="button">
+          <span class="visyalli-hidden">Предыдущее фото</span>
+        </button>
+        <button class="galry-button galary-next" type="button">
+          <span class="visyally-hidden">Следующее фото</span>
+        </button>
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="button" href="#">
+              <span class="visyally-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="button" href="#">
+              <span class="visyally-hidden">Фэйсбук</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="button" href="#">
+              <span class="visyally-hidden">Инстаграм</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="presents">
+        <h2 class="presents-title">Заказывайте мороженое и получайте подарки!</h2>
+        <ul class="presents-list">
+          <li class="presents-item">
+            <h3 class="presents-item-title">Малинка даром!</h3>
+            <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a class="button" href="#"><span>Хочу подарок</span></a>
+          </li>
+          <li class="presents-item">
+            <h3 class="presents-item-title">Маршмеллоу даром!</h3>
+            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
+            <a class="button" href="#"><span>Хочу подарок</span></a>
+          </li>
+        </ul>
+      </section>
+      <section class="assortment">
+        <h2 class="assortment-title">Попробуйте самые популярные вкусы нашего мороженого</h2>
+        <ul class="assortment-list">
+          <li class="assortment-item">
+            <img class="assortment-image" src="" alt="Мороженное малинка">
+            <h4 class="assortment-title">Малинка</h4>
+            <p>Сливочное мороженое с малиновым джемом</p>
+            <b>310 ₽/кг</b>
+            <button class="assortment-button" type="button">
+              <img src="" alt="значек корзины">
+            </button>
+          </li>
+          <li class="assortment-item">
+            <img class="assortment-image" src="" alt="Мороженное фисташка">
+            <h4 class="assortment-title">Фисташка</h4>
+            <p>Фисташковый пломбир с кусочками шоколада</p>
+            <b>340 ₽/кг</b>
+            <button class="assortment-button" type="button">
+              <img src="" alt="значек корзины">
+            </button>
+          </li>
+          <li class="assortment-item">
+            <img class="assortment-image" src="" alt="Мороженное черника">
+            <h4 class="assortment-title">Черника</h4>
+            <p>Крем-брюле с черничным джемом</p>
+            <b>330 ₽/кг</b>
+            <button class="assortment-button" type="button">
+              <img src="" alt="значек корзины">
+            </button>
+          </li>
+          <li class="assortment-item">
+            <img class="assortment-image" src="" alt="Мороженное бабл-гам">
+            <h4 class="assortment-title">Бабл-гам</h4>
+            <p>Ванильный пломбир со сладкой посыпкой</p>
+            <b>320 ₽/кг</b>
+            <button class="assortment-button" type="button">
+              <img src="" alt="значек корзины">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section class="description">
+        <h2 class="description-title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного проиводства на развес</h2>
+        <ul class="description-item">
+          <li class="description-list">
+            <img class="description-image" src="" alt="значек мороженного">
+            <p>Все наше мороженое изгатавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+          </li>
+          <li class="description-list">
+            <img class="description-image" src="" alt="значек листика">
+            <p>Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты
+              и добавки произведены из натурального сырья.</p>
+          </li>
+          <li class="description-list">
+            <img class="description-image" src="" alt="значек коровы">
+            <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.</p>
+          </li>
+          <li class="description-list">
+            <img class="description-image" src="" alt="значек термометра">
+            <p>Доставка нашего мороженого осуществляется в специальном термопаке, который не дает мороженому растаять и позволяет сохранить превосходный вкус.</p>
+          </li>
+        </ul>
+      </section>
+      <div class="news-mailing">
+        <article class="news">
+          <h2 class="vissyalli-hidden">Новости в блоге</h2>
+          <img class="news-image" src="" alt="Мороженое в чашке">
+          <p>Новое в нашем блоге</p>
+          <span>10 способов сервировки фруктовых щербетов к столу</span>
+        </article>
+        <section class="mailing">
+          <h2 class="visyalli-hidden">Подписка на рассылку</h2>
+          <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+          <form class="mailing-form" action="http://echo.htmlacademy.ru/" method="POST">
+            <p class="mailing-email">
+              <label class="visyalli-hidden" for="mailing-email">Email</label>
+              <input class="field" placeholder="email@example.com" type="email" name="email" id="mailing-email" required>
+            </p>
+            <button class="mailing-button" type="button">
+              <span>Отправить</span>
+            </button>
+          </form>
+        </section>
+      </div>
+      <section class="delivery">
+        <img class="delivery-image" src="" alt="Мороженное на столе">
+        <h2>Доставка любимого мороженого на дом</h2>
+        <p>Хочется полакомиться любимым дессертом, но нет времени съездить в магазин? Закажите доставку мороженого на дом и курьер привезет вам ваш заказ в течение часа!</p>
+      </section>
+      <section class="delivery-content">
+        <h2 class="visyalli-hidden">Форма доставки</h2>
+        <p>Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
+        <form class="delivery-content-form" action="http://echo.htmlacademy.ru/" method="POST">
+          <p class="delivery-content-form-date">
+            <span class="form-label form-label-icon">
+              <label for="delivery-content-date">Дата</label>
+              <button class="info" type="button">
+                <span class="visyalli-hidden">Посмотреть дополнительную информацию</span>
+              </button>
+            </span>
+              <input type="text" id="delivery-content-date" name="delivery-date" placeholder="01.04.2020">
+          </p>
+          <p class="delivery-content-form-phone">
+            <label for="delivery-content-phone">Телефон</label>
+            <input type="text" id="delivery-content-phone" name="phone" placeholder="+7 800 999-00-00">
+          </p>
+          <p class="delivery-content-form-adres">
+            <span class="form-label form-label-icon">
+              <label for="delivery-content-adres">Адрес</label>
+              <button class="info" type="button">
+                <span class="visyalli-hidden">Посмотреть дополнительную информацию</span>
+              </button>
+            </span>
+             <input type="text" id="delivery-content-adres" name="adres" placeholder="ул. Большая Конюшенная, 19/8">
+          </p>
+          <button class="button" type="submit">Отправить</button>
+        </form>
+      </section>
+      <section class="adres">
+        <h2 class="visyalli-hidden">Адрес</h2>
+        <img class="adres-image" src="" alt="мороженное в рожках">
+        <div class="adres-content">
+          <p class="adres-content-text">Адрес главного офиса и офлайн-магазина: </p>
+          <span class="adres-content-adres">наб. Реки Карповки, 5 лит П, Санкт-Петербург</span>
+          <p>Для заказов по телефону:</p>
+          <span class="adres-content-phone">+7 (812) 812-12-12</span>
+          <p>(с 10 до 20 ежедневно)</p>
+          <button class="button" type="submit">Форма обратной связи</button>
+        </div>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <section class="social">
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="button" href="#">
+              <span class="visyally-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="button" href="#">
+              <span class="visyally-hidden">Фэйсбук</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="button" href="#">
+              <span class="visyally-hidden">Инстаграм</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-info">
+        <p class="footer-info-suppliers">
+          <img class="footer-info-suppliers-image" src="" alt="черное сердце">
+          <a href="">Для поставщиков</a>
+        </p>
+        <p class="footer-info-document">
+          <a href="">Наши документы</a>
+        </p>
+        <p class="footer-info-production">
+          <a href="">О производстве</a>
+        </p>
+        <p class="footer-info-eco">
+          <a href="">Экологические стандарты</a>
+        </p>
+      </section>
+      <section class="copywriting">
+        <a class="copywriting-link" href="">
+          <img class="copywriting-image" src="" alt=".html academy">
+        </a>
+        <p>Сделано в <ins>.html academy</ins> © 2021</p>
+      </section>
+    </footer>
   </body>
 </html>
