--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 <body>
   <header class="page-header">
     <a class="main-logo" href="index.html">
-      <img class="logo" src="" alt="Логотип магазина Глэйси">
+      <img class="logo" src="#" alt="Логотип магазина Глэйси">
     </a>
     <nav class="main-navigation">
       <ul class="navigation-list">
@@ -57,7 +57,7 @@
           <a class="bredcrambs-link" href="index.html">Главная</a>
         </li>
         <li class="bredcrambs-item">
-          <a class="bredcrambs-link" href="">Каталог</a>
+          <a class="bredcrambs-link" href="#">Каталог</a>
         </li>
         <li class="bredcrambs-item">
           <a class="bredcrambs-link bredcrambs-link-current">Сливочное</a>
@@ -148,138 +148,137 @@
       <ul class="assortment-list">
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное малинка">
+            <img class="assortment-image" src="#" alt="Мороженное малинка">
             <h4 class="assortment-title">Малинка</h4>
           </a>
           <p>Сливочное мороженое с малиновым джемом</p>
           <b>310 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное фисташка">
+            <img class="assortment-image" src="#" alt="Мороженное фисташка">
             <h4 class="assortment-title">Фисташка</h4>
           </a>
           <p>Фисташковый пломбир с кусочками шоколада</p>
           <b>340 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное черника">
+            <img class="assortment-image" src="#" alt="Мороженное черника">
             <h4 class="assortment-title">Черника</h4>
           </a>
           <p>Крем-брюле
             с черничным джемом</p>
           <b>330 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное бабл-гам">
+            <img class="assortment-image" src="#" alt="Мороженное бабл-гам">
             <h4 class="assortment-title">Бабл-гам</h4>
           </a>
           <p>Ванильный пломбир со сладкой посыпкой</p>
           <b>320 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
-
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное малинка">
+            <img class="assortment-image" src="#" alt="Мороженное малинка">
             <h4 class="assortment-title">Ежевика</h4>
           </a>
           <p>Сливочное мороженое с ежевичным джемом</p>
           <b>330 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное малинка">
+            <img class="assortment-image" src="#" alt="Мороженное малинка">
             <h4 class="assortment-title">Банан</h4>
           </a>
           <p>Сливочный пломбир
             с банановым вкусом</p>
           <b>340 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное малинка">
+            <img class="assortment-image" src="#" alt="Мороженное малинка">
             <h4 class="assortment-title">Шоколадка</h4>
           </a>
           <p>Классический шоколадный пломбир</p>
           <b>270 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное малинка">
+            <img class="assortment-image" src="#" alt="Мороженное малинка">
             <h4 class="assortment-title">Клубничка</h4>
           </a>
           <p>Сливочный пломбир
             с клубничным вкусом</p>
           <b>300 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное малинка">
+            <img class="assortment-image" src="#" alt="Мороженное малинка">
             <h4 class="assortment-title">Лимон</h4>
           </a>
           <p>Освежающий лимонный сорбет</p>
           <b>310 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное малинка">
+            <img class="assortment-image" src="#" alt="Мороженное малинка">
             <h4 class="assortment-title">Ментол</h4>
           </a>
           <p>Сливочный пломбир с ментоловым сиропом</p>
           <b>320 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное малинка">
+            <img class="assortment-image" src="#" alt="Мороженное малинка">
             <h4 class="assortment-title">Орешек</h4>
           </a>
           <p>Фисташковый пломбир с шоколадным сиропом</p>
           <b>360 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное малинка">
+            <img class="assortment-image" src="#" alt="Мороженное малинка">
             <h4 class="assortment-title">Крем-брюле</h4>
           </a>
           <p>Классическое крем-брюле</p>
           <b>280 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
       </ul>
@@ -335,22 +334,22 @@
     </section>
     <section class="footer-info">
       <p class="footer-info-suppliers">
-        <img class="footer-info-suppliers-image" src="" alt="черное сердце">
-        <a href="">Для поставщиков</a>
+        <img class="footer-info-suppliers-image" src="#" alt="черное сердце">
+        <a href="#">Для поставщиков</a>
       </p>
       <p class="footer-info-document">
-        <a href="">Наши документы</a>
+        <a href="#">Наши документы</a>
       </p>
       <p class="footer-info-production">
-        <a href="">О производстве</a>
+        <a href="#">О производстве</a>
       </p>
       <p class="footer-info-eco">
-        <a href="">Экологические стандарты</a>
+        <a href="#">Экологические стандарты</a>
       </p>
     </section>
     <section class="copywriting">
-      <a class="copywriting-link" href="">
-        <img class="copywriting-image" src="" alt=".html academy">
+      <a class="copywriting-link" href="#">
+        <img class="copywriting-image" src="#" alt=".html academy">
       </a>
       <p>Сделано в <ins>.html academy</ins> © 2021</p>
     </section>
