--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="page-header">
     <a class="main-logo">
-      <img class="logo" src="" alt="Логотип магазина Глэйси">
+      <img class="logo" src="#" alt="Логотип магазина Глэйси">
     </a>
     <nav class="main-navigation">
       <ul class="navigation-list">
@@ -78,9 +78,9 @@
           </button>
         </li>
       </ol>
-      <img class="galary-image galary-image-current" src="" alt="Нежный пломбир">
-      <img class="galary-image" src="" alt="Сливочное мороженое">
-      <img class="galary-image" src="" alt="Карамельный пломбир">
+      <img class="galary-image galary-image-current" src="#" alt="Нежный пломбир">
+      <img class="galary-image" src="#" alt="Сливочное мороженое">
+      <img class="galary-image" src="#" alt="Карамельный пломбир">
       <button class="galary-button galary-prev" type="button">
         <span class="visyalli-hidden">Предыдущее фото</span>
       </button>
@@ -125,46 +125,46 @@
       <ul class="assortment-list">
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное малинка">
+            <img class="assortment-image" src="#" alt="Мороженное малинка">
             <h4 class="assortment-title">Малинка</h4>
           </a>
           <p>Сливочное мороженое с малиновым джемом</p>
           <b>310 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное фисташка">
+            <img class="assortment-image" src="#" alt="Мороженное фисташка">
             <h4 class="assortment-title">Фисташка</h4>
           </a>
           <p>Фисташковый пломбир с кусочками шоколада</p>
           <b>340 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное черника">
+            <img class="assortment-image" src="#" alt="Мороженное черника">
             <h4 class="assortment-title">Черника</h4>
           </a>
           <p>Крем-брюле с черничным джемом</p>
           <b>330 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
         <li class="assortment-item">
           <a class="assortment-link">
-            <img class="assortment-image" src="" alt="Мороженное бабл-гам">
+            <img class="assortment-image" src="#" alt="Мороженное бабл-гам">
             <h4 class="assortment-title">Бабл-гам</h4>
           </a>
           <p>Ванильный пломбир со сладкой посыпкой</p>
           <b>320 ₽/кг</b>
           <button class="assortment-button" type="button">
-            <img src="" alt="значек корзины">
+            <img src="#" alt="значек корзины">
           </button>
         </li>
       </ul>
@@ -174,22 +174,22 @@
         проиводства на развес</h2>
       <ul class="description-item">
         <li class="description-list">
-          <img class="description-image" src="" alt="значек мороженного">
+          <img class="description-image" src="#" alt="значек мороженного">
           <p>Все наше мороженое изгатавливается на собственном производстве, с использованием современного оборудования
             и проверенных временем технологий.</p>
         </li>
         <li class="description-list">
-          <img class="description-image" src="" alt="значек листика">
+          <img class="description-image" src="#" alt="значек листика">
           <p>Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты
             и добавки произведены из натурального сырья.</p>
         </li>
         <li class="description-list">
-          <img class="description-image" src="" alt="значек коровы">
+          <img class="description-image" src="#" alt="значек коровы">
           <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает
             долговременное сотрудничество.</p>
         </li>
         <li class="description-list">
-          <img class="description-image" src="" alt="значек термометра">
+          <img class="description-image" src="#" alt="значек термометра">
           <p>Доставка нашего мороженого осуществляется в специальном термопаке, который не дает мороженому растаять и
             позволяет сохранить превосходный вкус.</p>
         </li>
@@ -198,7 +198,7 @@
     <div class="news-mailing">
       <article class="news">
         <h2 class="vissyalli-hidden">Новости в блоге</h2>
-        <img class="news-image" src="" alt="Мороженое в чашке">
+        <img class="news-image" src="#" alt="Мороженое в чашке">
         <p>Новое в нашем блоге</p>
         <span>10 способов сервировки фруктовых щербетов к столу</span>
       </article>
@@ -218,7 +218,7 @@
       </section>
     </div>
     <section class="delivery">
-      <img class="delivery-image" src="" alt="Мороженное на столе">
+      <img class="delivery-image" src="#" alt="Мороженное на столе">
       <h2>Доставка любимого мороженого на дом</h2>
       <p>Хочется полакомиться любимым дессертом, но нет времени съездить в магазин? Закажите доставку мороженого на дом
         и курьер привезет вам ваш заказ в течение часа!</p>
@@ -254,7 +254,7 @@
     </section>
     <section class="adres">
       <h2 class="visyalli-hidden">Адрес</h2>
-      <img class="adres-image" src="" alt="мороженное в рожках">
+      <img class="adres-image" src="#" alt="мороженное в рожках">
       <div class="adres-content">
         <p class="adres-content-text">Адрес главного офиса и офлайн-магазина: </p>
         <span class="adres-content-adres">наб. Реки Карповки, 5 лит П, Санкт-Петербург</span>
@@ -287,22 +287,22 @@
     </section>
     <section class="footer-info">
       <p class="footer-info-suppliers">
-        <img class="footer-info-suppliers-image" src="" alt="черное сердце">
+        <img class="footer-info-suppliers-image" src="#" alt="черное сердце">
         <a href="">Для поставщиков</a>
       </p>
       <p class="footer-info-document">
-        <a href="">Наши документы</a>
+        <a href="#">Наши документы</a>
       </p>
       <p class="footer-info-production">
-        <a href="">О производстве</a>
+        <a href="#">О производстве</a>
       </p>
       <p class="footer-info-eco">
-        <a href="">Экологические стандарты</a>
+        <a href="#">Экологические стандарты</a>
       </p>
     </section>
     <section class="copywriting">
-      <a class="copywriting-link" href="">
-        <img class="copywriting-image" src="" alt=".html academy">
+      <a class="copywriting-link" href="#">
+        <img class="copywriting-image" src="#" alt=".html academy">
       </a>
       <p>Сделано в <ins>.html academy</ins> © 2021</p>
     </section>
